--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ section {
   font-size: 16px;
 }
 
-@media (max-width: 1285px) {
+/*@media (max-width: 1285px) {
   #menu-icon {
     display: block;
   }
@@ -427,4 +427,4 @@ section {
   .contact form {
     flex-direction: column;
   }
-}
+}*/
